# Web2PDF

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  start-url2pdf-release.bat  start-url2pdf.bat
.github/workflows/: release.yml
app/: __init__.py  cli.py  converter.py  interactive.py  main.py  models.py
scripts/: build_windows_release.ps1  release.ps1
